--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "pnpm@10.24.0",
   "scripts": {
     "dev": "vite",
-    "lint": "eslint --ext .jsx --fix src",
+    "lint": "eslint src --fix",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run"
@@ -25,8 +25,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
-    "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
     "jsdom": "^20.0.0",
     "vite": "^3.0.7",
