Update GitHub Actions workflow to print detailed issue information on new issues

--- a/.github/workflows/new-issue.yml
+++ b/.github/workflows/new-issue.yml
@@ -6,6 +6,6 @@ jobs:
   print-issue-details:
     runs-on: ubuntu-latest
     steps:
-      - name: Print issue title
+      - name: Print issue details
         run: |
-          echo "Issue title: ${{ github.event.issue }}"
+          echo "Issue details: ${{ toJSON(github.event.issue) }}"
