--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -27,6 +27,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
+    outputs:
+      script-file: ${{ steps.publish-js.outputs.script-file }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -36,6 +38,9 @@ jobs:
         run: pnpm install
       - name: Build
         run: pnpm build
+      - name: Publish JS file name
+        id: publish-js
+        run: find dist/assests/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -52,5 +57,7 @@ jobs:
           name: build-artifacts
       - name: List artifact files
         run: ls -lar
+      - name: Show build script file
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy application
         run: echo "Deploying application..."
