Echo output change (to test forcing a re-run of pipeline)

--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -75,4 +75,4 @@ jobs:
       - name: Show build script file
         run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy application
-        run: echo "Deploying application..."
+        run: echo "(Fake) deploying application..."
