--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -8,6 +8,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+      - name: Debug pnpm store BEFORE cache
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== PNPM_HOME variable ==="
+          echo $PNPM_HOME
+          echo "=== All PNPM-related env vars ==="
+          env | grep -i pnpm || echo "No PNPM variables set"
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -15,6 +25,14 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Install dependencies
         run: pnpm install
+      - name: Debug pnpm store AFTER install
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory contents ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== pnpm store status ==="
+          pnpm store status
       - name: Run linter
         run: pnpm run lint
   test:
@@ -25,6 +43,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+      - name: Debug pnpm store BEFORE cache
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== PNPM_HOME variable ==="
+          echo $PNPM_HOME
+          echo "=== All PNPM-related env vars ==="
+          env | grep -i pnpm || echo "No PNPM variables set"
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -32,6 +60,14 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Install dependencies
         run: pnpm install
+      - name: Debug pnpm store AFTER install
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory contents ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== pnpm store status ==="
+          pnpm store status
       - name: Run tests
         run: pnpm test
   build:
@@ -44,6 +80,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+      - name: Debug pnpm store BEFORE cache
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== PNPM_HOME variable ==="
+          echo $PNPM_HOME
+          echo "=== All PNPM-related env vars ==="
+          env | grep -i pnpm || echo "No PNPM variables set"
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -51,6 +97,14 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Install dependencies
         run: pnpm install
+      - name: Debug pnpm store AFTER install
+        run: |
+          echo "=== pnpm store path ==="
+          pnpm store path
+          echo "=== ~/.pnpm-store directory contents ==="
+          ls -lar ~/.pnpm-store 2>/dev/null || echo "Directory doesn't exist"
+          echo "=== pnpm store status ==="
+          pnpm store status
       - name: Build
         run: pnpm build
       - name: Publish JS file name
